window: only toggle fullscreen when double clicking with the left mouse button

fix: #27388